tests/script/negative/effects/toplevel_side_effect.s
global account myAccount = sender();

transition initial -> terminal;

@initial
go() {
  terminate();
}
